5th june Order page updaated

--- a/app/src/main/res/layout/activity_final_order.xml
+++ b/app/src/main/res/layout/activity_final_order.xml
@@ -22,9 +22,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20.dp"
-        android:fontFamily="@font/poppins_extrabold"
         android:text="Order"
-        android:textColor="@color/textPrimary"
+        android:textColor="@color/black"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="@id/finalPageBackBtn"
         app:layout_constraintStart_toEndOf="@id/finalPageBackBtn"
@@ -76,12 +75,13 @@
 
     <TextView
         android:id="@+id/usernameText"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30.dp"
         android:fontFamily="@font/poppins_regular"
         android:text="username (+912029292929)"
         android:textColor="@color/textPrimary"
+        android:gravity="center"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -166,7 +166,7 @@
         app:layout_constraintEnd_toEndOf="@id/iconShare" />
 
     <!-- Bottom Box -->
-    <View
+    <FrameLayout
         android:id="@+id/boxView"
         android:layout_width="0dp"
         android:layout_height="0dp"
