--- a/app/src/main/res/layout/fragment_invoice_fragment.xml
+++ b/app/src/main/res/layout/fragment_invoice_fragment.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorBackground"
+
         >
 
         <LinearLayout
@@ -38,18 +38,18 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_margin="20dp"
-            android:backgroundTint="@color/colorPrimary"
-            app:cardCornerRadius="30dp"
+            app:cardCornerRadius="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-
             app:layout_constraintTop_toBottomOf="@id/inoviceSearchlayout"
 
             >
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@color/colorPrimary"
+                >
 
                 <TextView
                     android:id="@+id/incomeTitle"
@@ -64,7 +64,6 @@
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-
                     />
 
                 <TextView
@@ -72,17 +71,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="-10dp"
-                    android:fontFamily="@font/poppins_extrabold"
-                    android:text="600000$"
-                    android:textColor="@color/textSecondary"
-                    android:textSize="30dp"
+                    android:text="600000"
+                    android:textColor="@color/green"
+                    android:textSize="50dp"
+                    android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="@id/incomeTitle"
                     app:layout_constraintTop_toBottomOf="@id/incomeTitle" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="-10dp"
+                    android:layout_marginTop="5dp"
                     android:fontFamily="@font/poppins_regular"
                     android:text="Your balance right now"
                     android:textColor="@color/textPrimary"
