--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="gray">#EAE9E9</color>
+    <color name="gray">#6FD1D1D1</color>
     <color name="green" >#2c9f1c</color>
     <color name="red">#C80101</color>
 
@@ -30,6 +30,7 @@
     <color name="TextColor">#F1F8F6</color>
 
     <color name="colorPrimary">#A5D8FF</color>
+    <color name="colorPrimaryTransparent">#BFA5D8FF</color>
     <color name="colorPrimaryVariant">#C7E9FF</color>
     <color name="colorOnPrimary">#083B53</color>
 
