--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Bill_Genrating_App" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <item name="fontFamily">@font/poppins_extrabold</item>
+<!--        <item name="fontFamily">@font/poppins_extrabold</item>-->
         <item name="android:statusBarColor">@color/colorPrimary</item>
     </style>
 
