--- a/app/src/main/res/layout/activity_final_order.xml
+++ b/app/src/main/res/layout/activity_final_order.xml
@@ -30,7 +30,7 @@
         app:layout_constraintTop_toTopOf="@id/finalPageBackBtn" />
 
     <androidx.cardview.widget.CardView
-
+        android:id="@+id/btnMakeChanges"
         android:layout_width="200dp"
         android:layout_height="40dp"
         android:layout_marginEnd="20.dp"
@@ -41,6 +41,7 @@
         app:layout_constraintTop_toTopOf="@id/finalPageOrderTag">
 
         <TextView
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fontFamily="@font/poppins_regular"
@@ -55,7 +56,6 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_margin="20.dp"
-        android:backgroundTint="@color/colorSuccess"
         app:cardCornerRadius="50.dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,6 +63,7 @@
 
 
         <TextView
+            android:id="@+id/btnNextActivity"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fontFamily="@font/poppins_regular"
@@ -103,67 +104,67 @@
 
     <!-- Show Items Icon -->
     <ImageView
-        android:id="@+id/iconItems"
+        android:id="@+id/showItemIconItems"
         android:layout_width="68dp"
         android:layout_height="68dp"
         android:background="@drawable/circle_shape"
         android:layout_marginTop="20.dp"
         android:padding="20dp"
         android:src="@drawable/inovice_icon"
-        app:layout_constraintEnd_toStartOf="@id/iconQR"
+        app:layout_constraintEnd_toStartOf="@id/btnIconQR"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/balanceText" />
 
     <!-- QR Code Icon -->
     <ImageView
-        android:id="@+id/iconQR"
+        android:id="@+id/btnIconQR"
         android:layout_width="68dp"
         android:layout_height="68dp"
         android:background="@drawable/circle_shape"
         android:src="@drawable/qr_code"
         android:padding="20dp"
-        app:layout_constraintEnd_toStartOf="@id/iconShare"
-        app:layout_constraintStart_toEndOf="@id/iconItems"
-        app:layout_constraintTop_toTopOf="@id/iconItems" />
+        app:layout_constraintEnd_toStartOf="@id/btnIconShare"
+        app:layout_constraintStart_toEndOf="@id/showItemIconItems"
+        app:layout_constraintTop_toTopOf="@id/showItemIconItems" />
     <!-- Share Icon -->
     <ImageView
-        android:id="@+id/iconShare"
+        android:id="@+id/btnIconShare"
         android:layout_width="68dp"
         android:layout_height="68dp"
         android:src="@drawable/share_icon"
         android:padding="20.dp"
         android:background="@drawable/circle_shape"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/iconQR"
-        app:layout_constraintTop_toTopOf="@id/iconItems" />
+        app:layout_constraintStart_toEndOf="@id/btnIconQR"
+        app:layout_constraintTop_toTopOf="@id/showItemIconItems" />
     <!-- Labels -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Show Items"
         android:textSize="12sp"
-        app:layout_constraintTop_toBottomOf="@id/iconItems"
-        app:layout_constraintStart_toStartOf="@id/iconItems"
-        app:layout_constraintEnd_toEndOf="@id/iconItems" />
+        app:layout_constraintTop_toBottomOf="@id/showItemIconItems"
+        app:layout_constraintStart_toStartOf="@id/showItemIconItems"
+        app:layout_constraintEnd_toEndOf="@id/showItemIconItems" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="QR Code"
         android:textSize="12sp"
-        app:layout_constraintTop_toBottomOf="@id/iconQR"
-        app:layout_constraintStart_toStartOf="@id/iconQR"
-        app:layout_constraintEnd_toEndOf="@id/iconQR" />
+        app:layout_constraintTop_toBottomOf="@id/btnIconQR"
+        app:layout_constraintStart_toStartOf="@id/btnIconQR"
+        app:layout_constraintEnd_toEndOf="@id/btnIconQR" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Share"
         android:textSize="12sp"
-        app:layout_constraintTop_toBottomOf="@id/iconShare"
-        app:layout_constraintStart_toStartOf="@id/iconShare"
-        app:layout_constraintEnd_toEndOf="@id/iconShare" />
+        app:layout_constraintTop_toBottomOf="@id/btnIconShare"
+        app:layout_constraintStart_toStartOf="@id/btnIconShare"
+        app:layout_constraintEnd_toEndOf="@id/btnIconShare" />
 
     <!-- Bottom Box -->
     <FrameLayout
@@ -173,7 +174,7 @@
         android:background="#DDDDDD"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="10.dp"
-        app:layout_constraintTop_toBottomOf="@id/iconQR"
+        app:layout_constraintTop_toBottomOf="@id/btnIconQR"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/cardPrintBillbtn"
