--- a/app/src/main/res/layout/fragment__invoice_billing_items.xml
+++ b/app/src/main/res/layout/fragment__invoice_billing_items.xml
@@ -77,5 +77,91 @@
         app:layout_constraintTop_toBottomOf="@id/invoice_header"
         />
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        >
+      <androidx.constraintlayout.widget.ConstraintLayout
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:padding="10.dp"
+          android:background="@color/colorPrimaryVariant"
+          >
+
+          <TextView
+              android:id="@+id/GrandTotalFragmentTag"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="Grand Total:- "
+              android:textSize="30.dp"
+              android:paddingEnd="20.dp"
+              app:layout_constraintEnd_toStartOf="@id/GrandTotalTextView"
+              app:layout_constraintTop_toTopOf="@id/GrandTotalTextView"
+              app:layout_constraintBottom_toBottomOf="@id/GrandTotalTextView"
+              />
+          <TextView
+              android:id="@+id/GrandTotalTextView"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintTop_toTopOf="parent"
+              android:text="000000 /-"
+              android:layout_marginEnd="10.dp"
+              android:textSize="30.dp"
+              />
+          <TextView
+              android:id="@+id/saveMoneyTV"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="00000 /-"
+              android:textSize="30dp"
+              android:textColor="@color/red"
+              android:layout_marginEnd="10.dp"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintTop_toBottomOf="@id/GrandTotalTextView"
+              />
+          <TextView
+
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="Saved :-"
+              android:textSize="30dp"
+              android:textColor="@color/red"
+              android:padding="20dp"
+              app:layout_constraintEnd_toStartOf="@id/saveMoneyTV"
+              app:layout_constraintTop_toTopOf="@id/saveMoneyTV"
+              app:layout_constraintBottom_toBottomOf="@id/saveMoneyTV"
+
+               />
+          <TextView
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="Mode Of Payment :- "
+              android:textSize="25.dp"
+              app:layout_constraintEnd_toStartOf="@id/ModeOfPaymentTv"
+              app:layout_constraintTop_toTopOf="@id/ModeOfPaymentTv"
+              app:layout_constraintBottom_toBottomOf="@id/ModeOfPaymentTv"
+
+              />
+          <TextView
+              android:id="@+id/ModeOfPaymentTv"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="UPI"
+              android:textStyle="bold|italic"
+              android:textSize="20sp"
+              android:textColor="@color/green"
+              app:layout_constraintEnd_toEndOf="@id/saveMoneyTV"
+              app:layout_constraintTop_toBottomOf="@id/saveMoneyTV"
+
+              />
+
+      </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
