--- a/app/src/main/res/layout/fragment_q_r__code_preview.xml
+++ b/app/src/main/res/layout/fragment_q_r__code_preview.xml
@@ -6,9 +6,9 @@
     tools:context=".Fragments.QR_CodePreview">
 
     <ImageView
+        android:id="@+id/barCodeImageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="40.dp"
         android:src="@drawable/qr_code"
         />
 
