--- a/app/src/main/res/layout-v26/activity_login.xml
+++ b/app/src/main/res/layout-v26/activity_login.xml
@@ -78,6 +78,7 @@
                >
 
            <com.google.android.material.textfield.TextInputEditText
+               android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
@@ -109,6 +110,7 @@
 
             >
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawablePadding="10dp"
