--- a/app/src/main/res/layout/fragment__invoice_billing_items.xml
+++ b/app/src/main/res/layout/fragment__invoice_billing_items.xml
@@ -68,98 +68,101 @@
             android:textColor="@color/colorOnPrimary"
             android:textStyle="bold"/>
     </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/itemRecycleView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/cardView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/invoice_header"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/invoice_header" />
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        >
-      <androidx.constraintlayout.widget.ConstraintLayout
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:padding="10.dp"
-          android:background="@color/colorPrimaryVariant"
-          >
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-          <TextView
-              android:id="@+id/GrandTotalFragmentTag"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text="Grand Total:- "
-              android:textSize="30.dp"
-              android:paddingEnd="20.dp"
-              app:layout_constraintEnd_toStartOf="@id/GrandTotalTextView"
-              app:layout_constraintTop_toTopOf="@id/GrandTotalTextView"
-              app:layout_constraintBottom_toBottomOf="@id/GrandTotalTextView"
-              />
-          <TextView
-              android:id="@+id/GrandTotalTextView"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              app:layout_constraintEnd_toEndOf="parent"
-              app:layout_constraintTop_toTopOf="parent"
-              android:text="000000 /-"
-              android:layout_marginEnd="10.dp"
-              android:textSize="30.dp"
-              />
-          <TextView
-              android:id="@+id/saveMoneyTV"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text="00000 /-"
-              android:textSize="30dp"
-              android:textColor="@color/red"
-              android:layout_marginEnd="10.dp"
-              app:layout_constraintEnd_toEndOf="parent"
-              app:layout_constraintTop_toBottomOf="@id/GrandTotalTextView"
-              />
-          <TextView
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimaryVariant"
+            android:padding="10.dp">
 
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text="Saved :-"
-              android:textSize="30dp"
-              android:textColor="@color/red"
-              android:padding="20dp"
-              app:layout_constraintEnd_toStartOf="@id/saveMoneyTV"
-              app:layout_constraintTop_toTopOf="@id/saveMoneyTV"
-              app:layout_constraintBottom_toBottomOf="@id/saveMoneyTV"
+            <TextView
+                android:id="@+id/GrandTotalFragmentTag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingEnd="20.dp"
+                android:text="Grand Total:- "
+                android:textSize="30.dp"
+                app:layout_constraintBottom_toBottomOf="@id/GrandTotalTextView"
+                app:layout_constraintEnd_toStartOf="@id/GrandTotalTextView"
+                app:layout_constraintTop_toTopOf="@id/GrandTotalTextView" />
 
-               />
-          <TextView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text="Mode Of Payment :- "
-              android:textSize="25.dp"
-              app:layout_constraintEnd_toStartOf="@id/ModeOfPaymentTv"
-              app:layout_constraintTop_toTopOf="@id/ModeOfPaymentTv"
-              app:layout_constraintBottom_toBottomOf="@id/ModeOfPaymentTv"
+            <TextView
+                android:id="@+id/GrandTotalTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10.dp"
+                android:text="000000 /-"
+                android:textSize="30.dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-              />
-          <TextView
-              android:id="@+id/ModeOfPaymentTv"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text="UPI"
-              android:textStyle="bold|italic"
-              android:textSize="20sp"
-              android:textColor="@color/green"
-              app:layout_constraintEnd_toEndOf="@id/saveMoneyTV"
-              app:layout_constraintTop_toBottomOf="@id/saveMoneyTV"
+            <TextView
+                android:id="@+id/saveMoneyTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10.dp"
+                android:text="00000 /-"
+                android:textColor="@color/red"
+                android:textSize="30dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/GrandTotalTextView" />
 
-              />
+            <TextView
 
-      </androidx.constraintlayout.widget.ConstraintLayout>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:text="Saved :-"
+                android:textColor="@color/red"
+                android:textSize="30dp"
+                app:layout_constraintBottom_toBottomOf="@id/saveMoneyTV"
+                app:layout_constraintEnd_toStartOf="@id/saveMoneyTV"
+                app:layout_constraintTop_toTopOf="@id/saveMoneyTV"
+
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Mode Of Payment :- "
+                android:textSize="25.dp"
+                app:layout_constraintBottom_toBottomOf="@id/ModeOfPaymentTv"
+                app:layout_constraintEnd_toStartOf="@id/ModeOfPaymentTv"
+                app:layout_constraintTop_toTopOf="@id/ModeOfPaymentTv"
+
+                />
+
+            <TextView
+                android:id="@+id/ModeOfPaymentTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="UPI"
+                android:textColor="@color/green"
+                android:textSize="20sp"
+                android:textStyle="bold|italic"
+                app:layout_constraintEnd_toEndOf="@id/saveMoneyTV"
+                app:layout_constraintTop_toBottomOf="@id/saveMoneyTV"
+
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 
